         kempmouse.h,specdrum.h},settings-header.pl: remove and relocate some
         header inclusions (Sergio).
20130505 unittests/unittests.c: add missing header (Sergio).
20130505 peripherals/{ay.c,fuller.c,if1.c,if2.c,joystick.c,kempmouse.c,
         machines_periph.c,melodik.c,printer.c,scld.c,speccyboot.c,specdrum.c,
         ula.c},peripherals/disk/{beta.c,opus.c}, peripherals/ide/simpleide.c:
         complete some missing field initializers (Sergio).
20130505 peripherals/if1.c: put braces around empty body in ‘do’ statements
         (Sergio).
20130512 ui/win32/options.pl: refactor options dialogs to split *_init and
         *_done functions out of *_proc function (Sergio).
20130513 settings-header.pl,settings.pl: change settings_defaults(),
         settings_copy() and settings_copy_internal() to void functions (Fred).
20130513 ui/widget/{options.pl,roms.c}: change settings_copy() to void function
         on widget UIs (Sergio).
20130516 man/fuse.1: update date and version for 1.1 release.
20130516 ChangeLog: update date in main changelog.
20130517 periph.[c|h],perl/Fuse/Dialog.pm,ui/gtk/{binary.c,confirm.c,
         gtkinternals.h,gtkjoystick.c,gtkui.c,options.pl,pokemem.c,rollback.c,
         roms.c,stock.c},ui/options.dat,ui/win32/options.pl: display
         confirmation dialogue for reset due to peripheral changes (Sergio).
20130517 README: update date for 1.1 release.
20130518 ui/widget/options.pl: display confirmation dialogue for reset due to
         peripheral changes (Stuart).
20130518 ui/widget/options.pl: update peripherals list when a machine reset is
         not needed (Sergio).
20130519 ui/widget/{query.c,widget.c,widget_internals.h}: display confirmation
         messages (Stuart).
20130519 ui/widget/{options.pl,query.c}: choose no/cancel upon pressing escape
         for all all confirmation dialogues, and remove workaround for this
         from peripheral reset confirmation dialogue (Stuart).